# RPG-Tables-Roller

./: .git-ignore  .gitignore  LICENCE  README.md  index.md  package-lock.json  package.json  svelte.config.js  tsconfig.json
docs/: data.md
downloads/: table-roller-app_1.0.0_x64_en-US.msi  table-roller-app_1.2.1_x64_en-US.msi
downloads/tables/: biome@1.7z  factions@2.7z  npc-fantasy@4.7z  table-selection.7z  tables-selection@1.7z
downloads/utilities/: utility-factions@2.7z  utility-names-fantasy@2.7z  utility-names-historic@2.7z  utility-names@2.7z  utility-nature@2.7z  utility-npc-fantasy@3.7z  utility-npc@4.7z  utility-senses@10.7z
src/: app.css  app.html  global.d.ts  hooks.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/lib/: enums.ts  settings.ts  stores.ts  types.d.ts
src/lib/AddProjFolder/: deleteFolder.svelte  index.svelte  renameFolder.svelte
src/lib/CategoryBar/: index.svelte
src/lib/CollectionBar/: expansion.svelte  index.svelte
src/lib/CollectionsBar/: expansion.svelte  index.svelte
src/lib/CollectionsBuilder/: index.ts
src/lib/Counter/: index.svelte
src/lib/FileSys/: defaultData.ts  index.ts
src/lib/Header/: index.svelte
src/lib/ProjectBuilder/: index.ts
src/lib/SettingsManager/: index.ts
src/lib/TableItem/: index.svelte
src/lib/UI/: BuildErrors.svelte  Header.svelte  ProjFolderExpander.svelte  card.svelte  hovermenu.svelte  hovermenuItem.svelte  loadedCollections.svelte  modal.svelte
src/lib/UI/FolderSelect/: index.svelte
src/lib/UI/ProjFolderExpander/: index.svelte
src/lib/Viewer/: choicebox.svelte  index.svelte
src/lib/card/: index.svelte
src/lib/data/: index.ts
src/routes/: __layout.svelte  about.svelte  index.svelte  project.svelte  projects.svelte  settings.svelte  table.svelte
src/themes/: fantasy.css  horror.css
static/exampleTableData/: README.txt
static/exampleTableData/Collections/castle/: castle-japan.json  castle.json  index.json
static/exampleTableData/Collections/castles/: castle-japan.json  castle.json  index.json
static/exampleTableData/Collections/example-castle/: castle-japan.json  castle.json  index.json
static/exampleTableData/Collections/example-names/: index.json  place.json
static/exampleTableData/Collections/names/: index.json  place.json
static/exampleTableData/Projects/: project1.json
(+5 files in other folders)
