[package]
name = "table-roller-app"
version = "1.0.0"
description = "An app for generateing rich random items/people"
authors = ["https://github.com/aronedwards91"]
license = "MIT"
repository = "https://github.com/aronedwards91/RPG-Tables-Roller"
default-run = "table-roller-app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["fs-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
