[package]
name = "table-roller-app"
version = "1.2.1"
description = "An app for generating descriptive random items/people"
authors = ["https://github.com/aronedwards91"]
license = "MIT"
repository = "https://github.com/aronedwards91/RPG-Tables-Roller"
default-run = "table-roller-app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.6", features = ["fs-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
